# putils

./: .clang-format  .gitignore  .gitmodules  ADirectory.hpp  AStar.hpp  AStar.md  AbstractFactory.hpp  AbstractFactory.md  BitFieldRef.cpp  BitFieldRef.hpp  BitFieldRef.md  CLI.hpp  CLI.md  CMakeLists.txt  CellularAutomaton.hpp  CellularAutomaton.md  Color.cpp  Color.hpp  Color.md  Csv.hpp  Direction.hpp  Directory.hpp  Directory.md  IniFile.cpp  IniFile.hpp  IniFile.md  LICENSE  MagicaVoxel.hpp  MagicaVoxel.md  MagicaVoxelToPolyvoxLoader.hpp  MagicaVoxelToPolyvoxLoader.md  MemoryPool.hpp  MemoryPool.inl  NamedPipe.hpp  NamedPipe.md  Observable.hpp  Observable.inl  Observable.md  OperatorForwarder.hpp  OperatorForwarder.md  (+141 more)
.github/workflows/: build.yml  cmake.yml  gcc.yml  msvc.yml
CMakeModules/: cmake_helper.cmake  conan.cmake  conan_helper.cmake
connection/: ATCPConnection.hpp  ATCPConnection.md  ATCPListener.hpp  ATCPListener.md  CMakeLists.txt  OpenSSLTCPConnection.hpp  OpenSSLTCPConnection.md  OpenSSLTCPListener.hpp  OpenSSLTCPListener.md  README.md  TCPConnection.hpp  TCPConnection.md  TCPListener.hpp  TCPListener.md  connection.hpp
imgui/: imgui.cpp
imgui_lua_bindings/: .generate_imgui_bindings.pl.swp  imgui_iterator.inl  imgui_lua_bindings.cpp
lua/: CMakeLists.txt  README.md  lua_helper.hpp  plua.hpp  sol.hpp
mediator/: BaseModule.cpp  BaseModule.hpp  CMakeLists.txt  DataPacket.hpp  Mediator.cpp  Mediator.hpp  Mediator.md  Module.hpp  Module.md  README.md
mediator/tests/: mediator.tests.cpp
meta/: GenLinearHierarchy.hpp  GenLinearHierarchy.md  README.md  apply.hpp  apply.md  for_each.hpp  for_each.md  has_type.hpp  has_type.md  nameof.hpp  nameof.md  new_from_tuple.hpp  new_from_tuple.md  table.hpp  table.md  type.hpp  type.md
opengl/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Mesh.md  Program.cpp  Program.hpp  Program.inl  Program.md  RAII.hpp  RAII.md  Uniform.hpp  Uniform.md
opengl/libs/glew/: glew.pc
opengl/libs/glew/src/: glew.c
pluginManager/: CMakeLists.txt  Export.md  Library.hpp  Library.inl  Library.md  LibraryFactory.cpp  LibraryFactory.hpp  PluginManager.hpp  PluginManager.inl  PluginManager.md  README.md  UnixLibrary.cpp  UnixLibrary.hpp  WindowsLibrary.cpp  WindowsLibrary.hpp
plugin_manager/: Library.hpp  Library.md  LibraryFactory.hpp  PluginManager.hpp  PluginManager.inl  README.md  UnixLibrary.cpp  UnixLibrary.hpp  WindowsLibrary.cpp  WindowsLibrary.hpp
plugin_manager/exports/: putils_plugin_manager_export.h
pse/: AnimatedSprite.cpp  AnimatedSprite.hpp  CMakeLists.txt  CompositeAnimatedSprite.cpp  CompositeAnimatedSprite.hpp  Engine.cpp  Engine.hpp  Engine.md  Grid.cpp  Grid.hpp  README.md  SfmlUtils.hpp  Shape.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  ViewItem.cpp  ViewItem.hpp  imgui-SFML.cpp
pse/TGUI-0.7.7/: CMakeLists.txt  license.txt
pse/TGUI-0.7.7/cmake/Modules/: FindSFML.cmake
putils/: angle.cpp  angle.hpp  angle.md  anonymous_variable.hpp  bit_field_ref.cpp  bit_field_ref.hpp  bit_field_ref.md  casts.hpp  casts.inl  casts.md  chop.cpp  chop.hpp  chop.md  color.cpp  color.hpp  color.md  command_line_arguments.cpp  command_line_arguments.hpp  command_line_arguments.inl  command_line_arguments.md  concatenate.hpp  concatenate.inl  concatenate.md  curl.cpp  curl.hpp  curl.md  default_constructors.hpp  default_constructors.md  direction.hpp  epsilon.hpp  epsilon.inl  epsilon.md  erase.hpp  erase.inl  forward_to.hpp  forward_to.md  function.hpp  function.md  get_call_stack.cpp  get_call_stack.hpp  (+74 more)
putils/fmt/: enum_formatter.hpp  enum_formatter.md  fmt.hpp  fmt.md  formattable.hpp  formattable.md  optional_formatter.hpp  optional_formatter.md  reflectible_formatter.hpp
putils/lua/: CMakeLists.txt  README.md  lua_helper.hpp  lua_helper.inl
putils/plugin_manager/: CMakeLists.txt  README.md  export.hpp  export.md  library.hpp  library.inl  library.md  library_factory.cpp  library_factory.hpp  plugin_manager.hpp  plugin_manager.inl  plugin_manager.md  unix_library.cpp  unix_library.hpp  windows_library.cpp  windows_library.hpp
putils/python/: CMakeLists.txt  README.md  pybind11_putils_function.hpp  python_helper.hpp  python_helper.inl  (+1 more)
python/: CMakeLists.txt  README.md  pybind11_putils_function.hpp  python.hpp  python_helper.hpp  python_helper.inl  python_helper.md
python/pybind11/include/pybind11/: cast.h  embed.h  functional.h  iostream.h  pybind11.h
python/pybind11/include/pybind11/detail/: common.h  init.h
qt/: loadView.hpp
reflection/: OutputPolicies.hpp  Reflectible.hpp  Reflectible.md  Serializable.hpp  Serializable.md  imgui_helper.hpp  imgui_helper.inl  imgui_helper.md  json_helper.hpp  json_helper.inl
reflection_helpers/: Attributes.hpp  Attributes.md  README.md  attributes_helper.hpp  attributes_helper.inl  attributes_helper.md  imgui_helper.hpp  imgui_helper.inl  imgui_helper.md  json_helper.hpp  json_helper.inl  json_helper.md  runtime_helper.cpp  runtime_helper.hpp  runtime_helper.inl  runtime_helper.md
tests/: BitFieldRef.tests.cpp  Color.tests.cpp  IniFile.tests.cpp  Observable.tests.cpp  Point.tests.cpp  RAII.tests.cpp  Rect.tests.cpp  Timer.tests.cpp  angle.tests.cpp  casts.tests.cpp  chop.tests.cpp  clamp.tests.cpp  command_line_arguments.tests.cpp  concatenate.tests.cpp  epsilon.tests.cpp  erase.tests.cpp  file_extension.tests.cpp  forward_to.tests.cpp  function.tests.cpp  lengthof.tests.cpp  macro_as_string.tests.cpp  on_scope_exit.tests.cpp  read_stream.tests.cpp  regex.tests.cpp  remove_if.tests.cpp  same_sign.tests.cpp  scoped_setter.tests.cpp  sign.tests.cpp  string.tests.cpp  to_string.tests.cpp  vector.tests.cpp  visit.tests.cpp
tmp/: imgui_helper.hpp  imgui_helper.inl  json_helper.md
vulkan/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Context.cpp  Context.hpp  GBuffer.cpp  GBuffer.hpp  Image.cpp  Image.hpp  ImmediateCommandBuffer.cpp  ImmediateCommandBuffer.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Queues.cpp  Queues.hpp  SwapChain.cpp  SwapChain.hpp  UniqueDebugUtilsMessengerEXT.cpp  UniqueDebugUtilsMessengerEXT.hpp  vulkan_helper.cpp  vulkan_helper.hpp
(+80 files in other folders)
